fixed the overflow issue for the post paragraph, now all data are being fetched from the db

--- a/src/PostPage/PostPage.css
+++ b/src/PostPage/PostPage.css
@@ -137,6 +137,7 @@ li:hover{
     font-size: clamp(12px,1.25vw,22px);
     text-align: left;
     line-height: 160%;
+    overflow-wrap: break-word;
 }
 .post-page-post-footer-div{
     height: 80px;
